Fix z-index for how to play modal

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  z-index: 1;
 }
 .overlay:target {
   visibility: visible;
